# E-App

./: .env.example  CLOUD_SETUP_GUIDE.md  README.md  package-lock.json
.github/workflows/: keep_alive.yml
backend/: Dockerfile  render.yaml  requirements.txt
backend/app/: database.py  main.py
backend/app/api/: hub.py  ielts.py
backend/app/models/: ielts.py  user.py
backend/app/services/: llm.py  prompts.py  scraper.py
backend/backend.egg-info/: SOURCES.txt  requires.txt
backend/ielts_daily_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: App.js  app.json  package.json
frontend/backend/: .env.example  .gitignore  pyproject.toml
frontend/backend/app/: database.py
frontend/backend/app/api/: auth.py  hub.py
frontend/backend/app/core/: config.py
frontend/backend/app/models/: knowledge.py
frontend/backend/backend.egg-info/: PKG-INFO
frontend/src/: api.js  theme.js
frontend/src/screens/: JournalScreen.js  LoginScreen.js  ParrotScreen.js  SpeakingScreen.js  StudyHubScreen.js  VocabHubScreen.js  WritingScreen.js
src/: api.js
src/screens/: HubDashboardScreen.js  MaterialScreen.js  PracticeDashboardScreen.js  RegisterScreen.js
