[project]
name = "backend"
version = "0.1.0"
description = "IELTS Daily Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "sqlmodel",
    "uvicorn",
    "httpx",
    "ddgs>=9.13.0",
    "python-multipart",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt==4.0.1",
    "psycopg2-binary",
]
